--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "// Update New !! 22/07/20 //\r # index.html",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/TheChoiceOfficial/ProjectTeam#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.25"
   }
 }
